<resources>
    <string name="app_name">SMApp</string>
    <string name="action_settings">Settings</string>
    <string name="rating">User Rating</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="movie_overview">Overview</string>
    <string name="pref_sort_movies_label">Sort Movies</string>
    <string name="pref_sort_movies_key">sortMovies</string>
    <string name="pref_most_popular">Most Popular</string>
    <string name="pref_highest_rated">Highest Rated</string>
    <string name="favorite" translatable="false">Favorite Movies</string>
    <string name="trailer">Movie Trailers</string>
    <string name="review">Reviews</string>
    <string name="movie_favorite">Add to your favorite movies list!</string>
</resources>
